edit some font and color and fix card size on mobile size

--- a/css/style.css
+++ b/css/style.css
@@ -809,6 +809,11 @@ a:focus {
   margin-top: -60px;
   border: 5px solid #fff;
 }
+@media (max-width: 992px) {
+  .service-block .hear-img img{
+    height: 198px !important;
+  }
+}
 
 .department-service {
   margin-bottom: 40px;
@@ -971,10 +976,6 @@ a:focus {
    }
    .cta-page .title-color{
     color: rgb(3, 100, 110);
-   }
-   .healthy-word{
-    color: rgb(221, 245, 244);
-    font-family: titr;
    }
 }
 .testimonial {
